--- a/github/workflows/auto-update-laws.yml
+++ b/github/workflows/auto-update-laws.yml
@@ -17,11 +17,9 @@ jobs:
       - name: Install dependencies
         run: pip install requests beautifulsoup4 pandas lxml urllib3
       - name: Download laws
-        run: python download_laws_and_tsuutatsu.py
-        continue-on-error: true
+        run: python download_laws_and_tsuutatsu.py || true
       - name: Download comprehensive shinryohoshu
-        run: python download_comprehensive_shinryohoshu.py
-        continue-on-error: true
+        run: python download_comprehensive_shinryohoshu.py || true
       - name: Commit and push
         run: |
           git config user.name "GitHub Actions"
